--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,61 +3,45 @@
 name: Deploy Vue App to GitHub Pages
 
 on:
-  # 当推送到 master 分支时触发
   push:
     branches: ["master"] # 如果您的主分支是 main，请改成 ["main"]
-
-  # 允许您在 GitHub Actions 页面手动触发此工作流
   workflow_dispatch:
 
-# 设置工作流所需的权限
 permissions:
   contents: read
   pages: write
   id-token: write
 
-# 定义一个名为 "deploy" 的作业（Job）
 jobs:
   deploy:
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
-    
-    # 指定运行器（Runner）的操作系统
     runs-on: ubuntu-latest
-
-    # 作业的步骤
     steps:
-      # 第一步：检出您的代码
       - name: Checkout
-        uses: actions/checkout@v4 # 更新到 v4
+        uses: actions/checkout@v4
 
-      # 第二步：设置 Node.js 环境
       - name: Setup Node.js
-        uses: actions/setup-node@v4 # 更新到 v4
+        uses: actions/setup-node@v4
         with:
-          node-version: 18 # 您可以根据需要更改 Node.js 版本
+          node-version: 22.x # <-- 已更新为要求的版本
           cache: 'npm'
 
-      # 第三步：安装项目依赖
       - name: Install Dependencies
-        run: npm ci 
+        run: npm ci
 
-      # 第四步：构建项目
       - name: Build
         run: npm run build
 
-      # 第五步：配置 GitHub Pages
       - name: Setup Pages
-        uses: actions/configure-pages@v5 # 更新到 v5
+        uses: actions/configure-pages@v5
 
-      # 第六步：上传构建产物（dist 文件夹）
       - name: Upload artifact
-        uses: actions/upload-pages-artifact@v3 # 更新到 v3 (这是专门为 Pages 优化的)
+        uses: actions/upload-pages-artifact@v3
         with:
           path: './dist'
 
-      # 第七步：部署到 GitHub Pages
       - name: Deploy to GitHub Pages
         id: deployment
-        uses: actions/deploy-pages@v4 # 更新到 v4
+        uses: actions/deploy-pages@v4
